src/style/shop/shop-product.scss
.shop-product {
  height: 314px;
  width: 240px;
  background-color: white;
  box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.1);

  display: grid;
  grid-template-rows: 15px [title-s]30px [title-e description-s] 1fr [description-e price-s] 25px [price-e footer-s] 65px [footer-e];
  grid-template-columns: 15px [s] 1fr [e] 15px;
  justify-items: start;
  grid-row-gap: 7px;

  & > * {
    grid-column: s/e;
  }
  &__title {
    grid-row: title-s/title-e;
    color: #00cb79;
    font-family: "Encode Sans Condensed", sans-serif;
    font-size: 16px;
    font-weight: 500;
  }
  &__description {
    grid-row: description-s/description-e;
    color: #333;
    font-size: 13px;
  }
  &__price {
    grid-row: price-s/price-e;
  }
  &__quantity {
    grid-row: footer-s/footer-e;
  }
  &__add-to-cart {
    grid-row: footer-s/footer-e;
    height: 47px;
    width: 97px;
    border-radius: 20px;
    color: #fff;
    background-color: #00cb79;
    font-size: 12px;
    font-weight: 600;

    display: grid;
    justify-items: center;
    justify-self: end;
    align-items: center;
    transition: all 0.3s ease;
    &:hover {
      transform: scale(0.97);
    }
    &:active {
      transform: scale(0.8);
    }
  }
}

